dnl replace install-sh by the name of a real source file
AC_INIT(install-sh)
AC_PREFIX_DEFAULT(${OZSKEL_PREFIX:-${HOME}/.oz})
MOZART_INIT
MOZART_PATH_PROG(VAR_OZDOC,ozdoc)
AC_MSG_CHECKING(for --with-mogul-top)
AC_ARG_WITH(mogul-top,
  [--with-mogul-top=URL		this will be used as the
	top URL for the MOGUL Archive],
  [mogul_cv_MOGUL_TOP=$with_mogul_top
   MOGUL_TOP=$mogul_cv_MOGUL_TOP],
  [MOGUL_TOP=${mogul_cv_MOGUL_TOP:-/~$USER/mogul}])
AC_MSG_RESULT($MOGUL_TOP)
AC_SUBST(MOGUL_TOP)
AC_OUTPUT(Makefile mogul.css:mogul.css.in)
errprint(ifdef([MOZART_INIT],
 [autoconf succeeded
],
 [autoconf failed: use 'autoconf -l ???' to include aclocal.m4.
]))
