AC_INIT(sgml)
AC_PROG_MAKE_SET
OZ_CONTRIB_INIT
OZ_COMPILE_ELISP
if test "$COMPILE_ELISP" = yes; then
AC_CHECK_PROGS(THEEMACS, emacs xemacs, emacs)
else
THEEMACS=emacs-not-configured
AC_SUBST(THEEMACS)
fi
SUBDIRS="code sgml"
AC_SUBST(SUBDIRS)
AC_OUTPUT(Makefile code/Makefile sgml/Makefile)

errprint(ifdef([OZ_INIT],
 [autoconf succeeded.
],
 [autoconf failed: use 'autoconf -l ../..' to include ../aclocal.m4.
]))
