AC_INIT(FlexLexer.h)
OZ_INIT
AC_PROG_LN_S
AC_CHECK_PROGS(RM, rm)
OZ_PATH_PROG(OZTOOL, oztool)
AC_SUBST(OZTOOL)
AC_CONFIG_SUBDIRS(ozflex)
AC_OUTPUT(Makefile ozbison/Makefile)

errprint(ifdef([OZ_INIT],
 [autoconf succeeded
],
 [autoconf failed: use 'autoconf -l ../../..' to include ../../../aclocal.m4.
]))
