dnl -*- sh -*-
dnl
dnl  Authors:
dnl    Denys Duchier, (duchier@ps.uni-sb.de)
dnl 
dnl  Contributors:
dnl    optional, Contributor's name (Contributor's email address)
dnl 
dnl  Copyright:
dnl    Michael Mehl (1997)
dnl 
dnl  Last change:
dnl    $Date$ by $Author$
dnl    $Revision$
dnl 
dnl  This file is part of Mozart, an implementation 
dnl  of Oz 3:
dnl     http://mozart.ps.uni-sb.de
dnl 
dnl  See the file "LICENSE" or
dnl     http://mozart.ps.uni-sb.de/LICENSE.html
dnl  for information on usage and redistribution 
dnl  of this file, and for a DISCLAIMER OF ALL 
dnl  WARRANTIES.
dnl

dnl Process this file with autoconf to produce a configure script.

dnl *****************************************************************
dnl INITIALIZE
dnl *****************************************************************

dnl This will check that we are in the Oz directory and initiate
AC_INIT(gdbm)

AC_CHECK_PROGS(RM, rm)

OZ_INIT

CONTRIBDIRS="tk ap"

AC_DEFUN(OZ_ADDTO_CONTRIBDIRS,[
  if test "$oz_cv_enable_contrib_$1" = yes; then
    CONTRIBDIRS="$CONTRIBDIRS${CONTRIBDIRS+ }$1"
  fi])

AC_MSG_CHECKING([for --enable-contrib-gdbm])
AC_ARG_ENABLE(contrib-gdbm,
  [--enable-contrib-gdbm
	whether to build the gdbm contribution (default: yes)],
  [oz_cv_enable_contrib_gdbm=$enableval],
  [: ${oz_cv_enable_contrib_gdbm:=$oz_enable_contrib_gdbm}
   : ${oz_cv_enable_contrib_gdbm:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_gdbm)
OZ_ADDTO_CONTRIBDIRS(gdbm)

AC_MSG_CHECKING([for --enable-contrib-regex])
AC_ARG_ENABLE(contrib-regex,
  [--enable-contrib-regex
	whether to build the regex contribution (default: yes)],
  [oz_cv_enable_contrib_regex=$enableval],
  [: ${oz_cv_enable_contrib_regex:=$oz_enable_contrib_regex}
   : ${oz_cv_enable_contrib_regex:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_regex)
OZ_ADDTO_CONTRIBDIRS(regex)

AC_MSG_CHECKING([for --enable-contrib-doc])
AC_ARG_ENABLE(contrib-doc,
  [--enable-contrib-doc
	whether to build the doc contribution (default: yes)],
  [oz_cv_enable_contrib_doc=$enableval],
  [: ${oz_cv_enable_contrib_doc:=$oz_enable_contrib_doc}
   : ${oz_cv_enable_contrib_doc:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_doc)
OZ_ADDTO_CONTRIBDIRS(doc)

AC_MSG_CHECKING([for --enable-contrib-os])
AC_ARG_ENABLE(contrib-os,
  [--enable-contrib-os
	whether to build the os contribution (default: yes)],
  [oz_cv_enable_contrib_os=$enableval],
  [: ${oz_cv_enable_contrib_os:=$oz_enable_contrib_os}
   : ${oz_cv_enable_contrib_os:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_os)
OZ_ADDTO_CONTRIBDIRS(os)

AC_MSG_CHECKING([for --enable-contrib-text])
AC_ARG_ENABLE(contrib-text,
  [--enable-contrib-text
	whether to build the text contribution (default: yes)],
  [oz_cv_enable_contrib_text=$enableval],
  [: ${oz_cv_enable_contrib_text:=$oz_enable_contrib_text}
   : ${oz_cv_enable_contrib_text:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_text)
OZ_ADDTO_CONTRIBDIRS(text)

AC_MSG_CHECKING([for --enable-contrib-dpanel])
AC_ARG_ENABLE(contrib-dpanel,
  [--enable-contrib-dpanel,
	whether to build the distributed panel (default: yes)],
  [oz_cv_enable_contrib_dpanel=$enableval],
  [: ${oz_cv_enable_contrib_dpanel:=$oz_enable_contrib_dpanel}
   : ${oz_cv_enable_contrib_dpanel:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_dpanel)
OZ_ADDTO_CONTRIBDIRS(dpanel)

AC_MSG_CHECKING([for --enable-contrib-micq])
AC_ARG_ENABLE(contrib-micq,
  [--enable-contrib-micq,
	whether to build the Mozart instant messenger (default: yes)],
  [oz_cv_enable_contrib_micq=$enableval],
  [: ${oz_cv_enable_contrib_micq:=$oz_enable_contrib_micq}
   : ${oz_cv_enable_contrib_micq:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_micq)
OZ_ADDTO_CONTRIBDIRS(micq)

AC_SUBST(CONTRIBDIRS)
AC_CONFIG_SUBDIRS($CONTRIBDIRS)

AC_MSG_CHECKING([for --enable-contrib-gdbm])
AC_ARG_ENABLE(contrib-ri_lp,
  [--enable-contrib-ri_lp
	whether to build the ri_lp contribution (default: yes)],
  [oz_cv_enable_contrib_ri_lp=$enableval],
  [: ${oz_cv_enable_contrib_ri_lp:=$oz_enable_contrib_ri_lp}
   : ${oz_cv_enable_contrib_ri_lp:=yes}])
AC_MSG_RESULT($oz_cv_enable_contrib_ri_lp)
OZ_ADDTO_CONTRIBDIRS(ri_lp)

AC_OUTPUT(Makefile)

errprint(ifdef([OZ_INIT],
 [autoconf succeeded.
],
 [autoconf failed: use 'autoconf -l ..' to include ../aclocal.m4.
]))

